# ma

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dev.sh  run.sh
docs/: data-model.md  komorebi-audit.md  migration-notes.md  privacy-and-safety.md  protocols.md  recommendation-engine.md  research-to-product-matrix.md  roadmap.md
ma-server/: Cargo.toml
ma-server/src/: auth.rs  curriculum.rs  insights.rs  journal.rs  main.rs  profile.rs  recommendations.rs  tts.rs
ma-server/src/companion/: claude.rs  llm.rs  mod.rs  openai.rs  presence.rs  prompt.rs
ma-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ma-web/src/: api.js  api.ts  audio.js  audio.ts  auth.js  auth.ts  date-utils.js  date-utils.ts  dev-sw-cleanup.js  dev-sw-cleanup.ts  history.js  history.ts  insights.js  insights.ts  journal.js  journal.ts  main.js  main.ts  onboarding.js  onboarding.ts  session-engine.js  session-engine.ts  session.js  session.ts  store.js  store.ts  ui.css  vite-env.d.ts  voice-guidance.js  voice-guidance.ts
ma-web/src/__tests__/: api.test.ts  auth.test.ts  date-utils.test.ts  session-engine.test.ts
ma-web/src/modes/: checkin.js  checkin.ts  compassion.js  compassion.ts  emotion-mapping.js  emotion-mapping.ts  gratitude.js  gratitude.ts  sbnrr.js  sbnrr.ts
ma-web/src/modes/__tests__/: api-extensions.test.ts  checkin.test.ts  compassion.test.ts  emotion-mapping.test.ts  gratitude.test.ts  sbnrr.test.ts
shared/protocols/: legacy-mode-map.json  registry.json
