[package]
name = "ma-server"
version = "0.1.0"
edition = "2021"

[features]
lambda = ["dep:lambda_http"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
libsql = { version = "0.6", default-features = false, features = ["remote", "tls"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
lambda_http = { version = "0.13", optional = true }
jsonwebtoken = "9"
base64 = "0.22"
